--- a/main.css
+++ b/main.css
@@ -52,15 +52,50 @@ p{
 .type-bottom{
 	display: inline-block;
 	border-bottom: 0.5px dashed rgba(0,0,0,0.2);
-	letter-spacing: 12px;
 }
 .type-top{
 	display: inline-block;
 	border-top: 0.5px dashed rgba(0,0,0,0.2);
 }
+.spacing-hack{
+	letter-spacing: 12px;
+}
+
+/* shapes
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.shapes{
+	margin-bottom: 16px;
+}
+.shapes img{
+	margin-right: 12px;
+}
+
+/*@keyframes rotating{
+  from {
+    -webkit-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+    -o-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}*/
+.rotating1{
+  animation: rotating 85s linear infinite;
+}
+.rotating2{
+  animation: rotating 90s linear infinite;
+}
+.rotating3{
+  animation: rotating 100s linear infinite;
+}
+
 
 /* layout
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 section{
 	margin-bottom: 200px;
 }
@@ -79,7 +114,8 @@ main{
 .intro .left{
 	width:50%;
 	display: flex;
-	align-items: flex-end;
+	flex-direction: column;
+	justify-content: space-between;
 	padding-right: 80px;
 }
 
@@ -104,6 +140,28 @@ video{
 	width: 80%;
 }
 
+.project-item{
+	border: 0.5px dashed rgba(0,0,0,0.2);
+	padding: 24px;
+	margin-bottom: 72px;
+	transition: 0.1s;
+}
+.project-item:hover{
+	border-radius: 4px;
+	border: 0.5px dashed rgba(0,0,0,0);
+	background-color: white;
+	box-shadow: 0px 8px 24px rgba(100,50,0,0.05);
+}
+
+
+.project-description{
+	max-width: 50%;
+}
+.project-description h3{
+	border-bottom: 0px;
+	margin-bottom: 0px;
+	margin-top: 24px;
+}
 
 
 
